tests/sksl/errors/ArrayUnspecifiedDimensions.sksl
in int arr1[][2][3][4][5][6][7][8];
in int arr2[1][][3][4][5][6][7][8];
in int arr3[1][2][][4][5][6][7][8];
in int arr4[1][2][3][][5][6][7][8];
in int arr5[1][2][3][4][][6][7][8];
in int arr6[1][2][3][4][5][][7][8];
in int arr7[1][2][3][4][5][6][][8];
in int arr8[1][2][3][4][5][6][7][];
in int arrEven[1][][3][][5][][7][];
in int arrOdd[][2][][4][][6][][8];
in int arrNone[][][][][][][][];
in int arrFloat[1.];
in int arrBool[true];
in int arrNull[null];
